[metadata]
name = pulse-eco
version = 1.0.1
author = martinkozle
author_email = martinkozle@yahoo.com
description = pulse.eco API wrapper
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/martinkozle/pulse-eco
project_urls =
    Bug Tracker = https://github.com/martinkozle/pulse-eco/issues
classifiers =
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
platforms = any

[options]
packages = find_namespace:
python_requires = >=3.8
install_requires =
    requests>=2.26.0

[options.extras_require]
test = pytest>=6.0
pandas = pandas>=1.0.0

[options.entry_points]
console_scripts =
    pulseeco = pulseeco.__main__:main [pandas]
